portfolio/src/global.css
/**
 * WHAT IS THIS FILE?
 *
 * Globally applied styles. No matter which components are in the page or matching route,
 * the styles in here will be applied to the Document, without any sort of CSS scoping.
 *
 */
@font-face {
  font-family: main;
  src: url('/fonts/Abril_Fatface/AbrilFatface-Regular.ttf');
}

:root {
  --text-color: #132a4f;
  --theme-color: #fff;
  --hightlight-color: rgb(237, 192, 67);
}

* {
  padding: 0;
  margin: 0;
  cursor: default;
  font-family: main;
}

body {
  background-color: var(--theme-color);
}

/*
button styles
*/

#theme_button {
  position: absolute;
  background-color: var(--theme-color);
  color: var(--text-color);
  bottom: 10px;
  right: 10px;
  border: 2px solid var(--text-color);
  height: 25px;
  width: 100px;
  border-radius: 0 0 5px 0;
}

#theme_button:hover {
  cursor: grab;
  border: 2px solid var(--hightlight-color);
}

/* start page styles */

#main-name {
  position: absolute;
  color: var(--text-color);
  text-align: center;
  width: fit-content;
  height: fit-content;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  font-size: 2rem;
  cursor: arrow;
}

#main-name span {
  transition: 2s;
  text-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
}

#main-name span:hover {
  font-size: 6rem;
  color: var(--hightlight-color);
  text-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

#links img {
  height: 40px;
}

#links img:hover {
  border-bottom: 1px solid var(--hightlight-color);
  cursor: grab;
}

#profile_img {
  height: 150px;
}

hr {
  position: relative;
  border: 1px solid var(--text-color);
  width: 100px;
  left: 50%;
  transform: translateX(-50%);
  margin-top: 20px;
  margin-bottom: 20px;
}

#skill_icons {
  position: absolute;
  width: 500px;
  height: 500px;
  border-radius: 50%;
  top: calc(50% - 250px);
  left: calc(50% - 250px);
  animation-name: circle;
  animation-duration: 40s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  transform-origin: center center;
}

#skill_icons img {
  position:absolute;
  width: 75px;
  transform-origin: center center;
  animation-name: icon;
  animation-duration: 40s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  transition: 2s;
}

#skill_icons img:hover {
  width: 100px;
  cursor: grab;
}

#c {
  left: calc(50% - (75px)/2);
}

#java {
  top: calc(50% - (75px)/2);;
  left: calc(100% - 75px);
}

#ts {
  top: calc(50% - (75px)/2);
}
 
#docker {
  left: calc(50% - (75px)/2);
  top: calc(100% - 75px);
}

#react {
  left: calc(75% - 20px);
  top: calc(75% - 20px);
}

#python {
  left: 70px;
  top: calc(75% - 20px);
}

#tailwind {
  top: 70px;
  left: calc(75% - 20px);
}

#qwik {
  left: 70px;
  top: 70px;
}

#skills_desc {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: var(--text-color);
  width: 300px;
}

@keyframes circle {
  from {transform: rotate(0);}
  to {transform: rotate(360deg);}
}

@keyframes icon {
  from {transform: rotate(360deg);}
  to {transform: rotate(0);}
}

#button_container {
  position: absolute;
  display: flex;
  flex-direction: row;
  left: 50%;
  transform: translateX(-50%);
  top: 20px;
}

#button_container button {
  height: 50px;
  width: 100px;
  margin-left: 10px;
  margin-right: 10px;
  background-color: var(--text-color);
  border: 2px solid var(--theme-color);
  color: var(--theme-color);
}

#button_container button:hover {
  cursor: grab;
  background-color: var(--theme-color);
  border: 2px solid var(--text-color);
  color: var(--text-color);
}

#projects {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: var(--text-color);
}

#projects a {
  color: var(--highlight-color); 
}

#projects a:hover {
  cursor: pointer;
}


  

